# Orion

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  softwareitem.cpp  softwareitem.h
attica/: CMakeLists.txt  version.h
